tests/baselines/reference/parserES5ForOfStatement13(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ForOfStatement13.ts(1,20): error TS2304: Cannot find name 'X'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ForOfStatement13.ts (1 errors) ====
    for (let {a, b} of X) {
                       ~
!!! error TS2304: Cannot find name 'X'.
    }